--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -29,3 +29,8 @@ bazel_dep(
     version = "28.3",
     repo_name = "com_google_protobuf",
 )
+
+bazel_dep(
+    name = "rules_cc",
+    version = "0.1.1",
+)
