--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -29,3 +29,8 @@ bazel_dep(
     version = "28.3",
     repo_name = "com_google_protobuf",
 )
+
+single_version_override(
+    module_name = "abseil-cpp",
+    version = "20240722.0.bcr.2",
+)
