--- a/proto/BUILD
+++ b/proto/BUILD
@@ -125,6 +125,7 @@ cc_library(
         "//common:re",
         "//common:utilities",
         "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/container:flat_hash_set",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
