Fix `comp_db_hook` setup.

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,5 +1,6 @@
 common --enable_bzlmod --spawn_strategy=local
 common --client_env=CC=comp_db_hook --client_env=CXX=comp_db_hook
+common --host_action_env=COMP_DB_HOOK_COMPILER=/usr/bin/clang++-18
 common --action_env=COMP_DB_HOOK_COMPILER=/usr/bin/clang++-18
 common --cxxopt='-std=c++17' --cxxopt='-fno-exceptions' --cxxopt='-Wno-unused-function'
 common --linkopt='-lssl' --linkopt='-lcrypto'
