Improve protobuf code generation.

--- a/proto/BUILD
+++ b/proto/BUILD
@@ -105,10 +105,12 @@ cc_library(
     hdrs = ["descriptor.pb.sync.h"],
     deps = [
         ":proto",
+        "//common:flat_set",
         "//common:utilities",
         "//io:cord",
         "//proto:wire_format",
         "@com_google_absl//absl/base",
+        "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/types:span",
     ],
@@ -135,10 +137,12 @@ cc_library(
     deps = [
         ":descriptor",
         ":proto",
+        "//common:flat_set",
         "//common:utilities",
         "//io:cord",
         "//proto:wire_format",
         "@com_google_absl//absl/base",
+        "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/types:span",
     ],
