--- a/proto/BUILD
+++ b/proto/BUILD
@@ -81,8 +81,11 @@ cc_library(
     hdrs = ["proto.h"],
     visibility = ["//visibility:public"],
     deps = [
+        "//common:flat_map",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/types:span",
     ],
 )
 
