--- a/common/re/BUILD
+++ b/common/re/BUILD
@@ -54,6 +54,8 @@ cc_library(
         "//common:reffed_ptr",
         "@com_google_absl//absl/container:btree",
         "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
     ],
 )
 
