--- a/common/BUILD
+++ b/common/BUILD
@@ -368,6 +368,7 @@ cc_library(
     srcs = ["re.cc"],
     hdrs = ["re.h"],
     deps = [
+        ":no_destructor",
         ":reffed_ptr",
         ":utilities",
         "//common/re:automaton",
@@ -376,6 +377,8 @@ cc_library(
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:cord",
+        "@com_google_absl//absl/types:span",
     ],
 )
 
