Implement proto maps.

--- a/proto/BUILD
+++ b/proto/BUILD
@@ -10,6 +10,7 @@ cc_library(
     name = "runtime",
     srcs = [
         "duration.pb.sync.cc",
+        "reflection.cc",
         "text_format.cc",
         "time_util.cc",
         "timestamp.pb.sync.cc",
@@ -31,11 +32,16 @@ cc_library(
         "//common:flat_set",
         "//common:no_destructor",
         "//common:re",
+        "//common:trie_map",
         "//common:utilities",
         "//io:buffer",
         "//io:cord",
         "@com_google_absl//absl/base",
         "@com_google_absl//absl/base:config",
+        "@com_google_absl//absl/container:btree",
+        "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/container:node_hash_map",
+        "@com_google_absl//absl/log:check",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
@@ -130,6 +136,7 @@ cc_test(
         "//proto/tests:field_test_cc_proto",
         "//proto/tests:indirection_test_cc_proto",
         "//proto/tests:map_test_cc_proto",
+        "//proto/tests:map_type_test_cc_proto",
         "//proto/tests:oneof_test_cc_proto",
         "//proto/tests:time_field_test_cc_proto",
         "@com_google_absl//absl/status",
@@ -171,6 +178,7 @@ tsdb2_cc_proto_library(
 proto_library(
     name = "dependency_mapping_proto",
     srcs = ["dependency_mapping.proto"],
+    deps = [":annotations_proto"],
 )
 
 tsdb2_cc_proto_library(
@@ -283,13 +291,19 @@ cc_test(
         ":generator",
         ":runtime",
         "//common:fingerprint",
+        "//common:flat_map",
         "//common:testing",
+        "//common:trie_map",
         "//common:utilities",
         "//proto/tests:field_test_cc_proto",
         "//proto/tests:indirection_test_cc_proto",
         "//proto/tests:map_test_cc_proto",
+        "//proto/tests:map_type_test_cc_proto",
         "//proto/tests:oneof_test_cc_proto",
         "//proto/tests:time_field_test_cc_proto",
+        "@com_google_absl//absl/container:btree",
+        "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/container:node_hash_map",
         "@com_google_absl//absl/hash",
         "@com_google_absl//absl/status:status_matchers",
         "@com_google_absl//absl/time",
@@ -307,6 +321,7 @@ cc_test(
         "//proto/tests:field_test_cc_proto",
         "//proto/tests:indirection_test_cc_proto",
         "//proto/tests:map_test_cc_proto",
+        "//proto/tests:map_type_test_cc_proto",
         "//proto/tests:oneof_test_cc_proto",
         "//proto/tests:time_field_test_cc_proto",
         "@com_google_absl//absl/status",
